--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "test": "node_modules/.bin/karma start karma.conf.js",
-    "start": "npm run webpack -- --watch",
+    "start": "./bin/webpack-dev-server",
   },
   "engines": {
     "node": ">=6.0.0",
