--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start": "./bin/webpack-dev-server"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=6.0.0",
+    "yarn": ">=0.25.2"
   },
   "author": "",
   "license": "ISC"
